--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb://localhost:27017/contactmanager
+MONGODB_URI=mongodb+srv://mrecitc9_db_user:suresh1319@cluster0.my6udwu.mongodb.net/contactmanager
 PORT=5000
