--- a/client/package.json
+++ b/client/package.json
@@ -1,9 +1,12 @@
 {
   "name": "contact-manager-client",
   "version": "1.0.0",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "dev": "vite",
-    "build": "npx vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
