--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,5 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "devCommand": "npm run dev",
-  "installCommand": "npm install",
-  "framework": null,
-  "rootDirectory": "client"
+  "installCommand": "npm install"
 }
